--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -10,8 +10,7 @@
   .button
     = link_to image_tag("symbol_mitmachen.png", :mouseover => "symbol_mitmachen_down.png"), {:controller => 'protest'}, :title => "Mitmachen"
   %p
-    Der nächste Gerichtstermin ist schon am XXX.
-    %br/
+    Der nächste Gerichtstermin ist schon am 4. Mai.
     Jetzt Protestmail verschicken und Vattenfall stoppen!
   .clear
 
@@ -31,4 +30,4 @@
   = link_to "Hier klicken!", :controller => 'protest'
 
 %h3 Klimaschutz statt Vattenfall
-%p Wir lassen uns Klimaschutz nicht verbieten – erst recht nicht von Vattenfall
+%p Wir lassen uns Klimaschutz nicht verbieten – erst recht nicht von Vattenfall!
