--- a/app/views/site/privacy.html.haml
+++ b/app/views/site/privacy.html.haml
@@ -3,4 +3,6 @@
 %p
   Alle Daten, die auf dieser Seite erfasst werden, verwenden wir nur im Rahmen dieser Kampagne und zum Versenden der Emails an die angegebenen Empfänger/innen. Deine Daten werden nicht an Dritte weitergegeben.
 %p
+  Wir verwenden außerdem eine SSL-Verschlüsselung zwischen Deinem Browser und unserem Server. Damit wird das Ausspähen Deiner Daten durch Fremde stark erschwert.
+%p
   Für weitere Fragen zum Datenschutz wende Dich bitte an info [at] ausgekohlt.net
