--- a/app/views/site/story.html.haml
+++ b/app/views/site/story.html.haml
@@ -5,7 +5,7 @@
 %h3 Warum die Besetzung eines Kohlekraftwerkes?
 %p
   %i
-    „Mit dem Bau neuer Kohlekraftwerke wird diese klimaschädlichste Form der Stromerzeugung für die nächsten Jahrzehnte zementiert. So werden Milliarden von Tonnen Kohlendioxid, die Luft geblasen, die das Klima verändern und dazu beitragen, die soziale Schieflage zu verschärfen. Der Klimawandel betrifft diejenigen am stärksten, die am wenigsten dazu beigetragen haben: die Menschen des globalen Südens und die sozial schwachen. Wir streiten auch mit Zivilem Ungehorsam gegen den Bau neuer Kohlekraftwerke, denn damit verkohlt Vattenfall unsere Zukunft.“
+    „Mit dem Bau neuer Kohlekraftwerke wird diese klimaschädlichste Form der Stromerzeugung für die nächsten Jahrzehnte zementiert. So werden Milliarden von Tonnen Kohlendioxid, die Luft geblasen, die das Klima verändern und dazu beitragen, die soziale Schieflage zu verschärfen. Der Klimawandel betrifft diejenigen am stärksten, die am wenigsten dazu beigetragen haben: die Menschen des globalen Südens und die sozial Schwachen. Wir streiten auch mit Zivilem Ungehorsam gegen den Bau neuer Kohlekraftwerke, denn damit verkohlt Vattenfall unsere Zukunft.“
 %p Obwohl sich die Bundesregierung auf internationaler Ebene immer wieder als Vorreiter beim Klimaschutz aufspielt, tut sie tatsächlich nichts, um einen Kurswechsel in der Energie- und Klimapolitik einzuleiten. Sie stellt sich hinter die Interessen der großen Energiekonzerne, die weiterhin auf den Bau neuer Kohlekraftwerke setzen – ineffiziente und klimaschädliche Großkraftwerke, die eine Entwicklung von Erneuerbaren Energien behindern. Alleine hierzulande sind 29 weitere dieser Klima-Killer geplant. Damit ist die Bundesrepublik europäischer Spitzenreiter wenn es darum geht, für die nächsten 40 Jahre Milliarden von Tonnen Kohlendioxid zu produzieren.
 
 %h3 Rechtfertigt das eine Gesetzesübertretung?
@@ -24,4 +24,7 @@
   %b= link_to "Jetzt Emails an den Vattenfall-Vorstand schicken!", :controller => 'protest'
 
 %p
-  %b Die Gerichtsverfahren kosten zudem viel Geld – bitte hier spenden damit wir den Klageweg gegen die kriminalisierung durch Vattenfall gehen können.
+  %b
+    Die Gerichtsverfahren kosten zudem viel Geld – bitte
+    = link_to "hier spenden", :action => 'donate'
+    damit wir den Klageweg gegen die kriminalisierung durch Vattenfall gehen können.
