--- a/app/views/site/terms.html.haml
+++ b/app/views/site/terms.html.haml
@@ -1,7 +1,8 @@
 - title "Impressum"
 
 %p
-  Inhaltlich verantwortlicher Redakteur sofern Beiträge nicht namentlich gekennzeichnet ist:
+  Inhaltlich verantwortlicher Redakteur - sofern Beiträge
+  nicht namentlich gekennzeichnet sind:
 %p
   Benjamin Meichsner
   %br/
