--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -191,3 +191,12 @@ a
 
 ul#supporter
   font-size: 1.1em
+
+.news
+  margin: 5px
+  padding: 5px
+  .date
+    font-weight: bold
+    font-size: 1.4em
+  .header h3
+    margin: 5px 0
