Removed cellphone of news author.

--- a/app/views/site/news.html.haml
+++ b/app/views/site/news.html.haml
@@ -38,6 +38,4 @@
       Repression zurück.", so Felix Pithan. "Vor Gericht gehört Vattenfall für
       seine klimazerstörende und unsoziale Geschäftspolitik.".
     %p
-      Für Rückfragen:
-      Björn Thoeroe, 0178-8607530
-      Felix Pithan, 01577-4748089
+      Björn Thoeroe und Felix Pithan von Gegenstrom08
