Fixed wrong link to donate page.

--- a/app/views/protest/delivered.html.haml
+++ b/app/views/protest/delivered.html.haml
@@ -7,4 +7,4 @@
 %p
   = link_to "Weitersagen", recommend_path
   |
-  = link_to "Spenden", "XXX"
+  = link_to "Spenden", :controller => 'site', :action => 'donate'
