New supporters. Less bad guys..

--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -10,6 +10,8 @@
     %li= link_to "glocal hanau", "http://www.linksnavigator.de/node/45"
     %li= link_to "Attac", "http://www.attac.de"
     %li= link_to "Noya - das Jugendnetzwerk in Attac", "http://www.no-ya.de"
+    %li= link_to "Robin Wood", "http://www.robinwood.de/"
+    %li= link_to "FelS", "http://fels.nadir.org/"
 
 %p
   Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? 
