--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -196,6 +196,8 @@ ul#supporter
 .news
   margin: 5px
   padding: 5px
+  margin-bottom: 2em
+  background-color: #F9F9F9
   .date
     font-weight: bold
     font-size: 1.4em
