--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -203,3 +203,12 @@ ul#supporter {
     font-size: 1.4em; }
   .news .header h3 {
     margin: 5px 0; }
+
+th {
+  padding: 5px; }
+
+td {
+  padding: 1px 3px;
+  border-bottom: 1px solid grey; }
+  td .right {
+    text-align: right; }
