Changed date in protest box on startpage.

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -10,7 +10,8 @@
   .button
     = link_to image_tag("symbol_mitmachen.png", :mouseover => "symbol_mitmachen_down.png"), {:controller => 'protest'}, :title => "Mitmachen"
   %p
-    Der nächste Gerichtstermin ist schon am 4. Mai.
+    Der nächste Gerichtstermin ist schon am
+    %b 12. Mai.
     Jetzt Protestmail verschicken und Vattenfall stoppen!
   .clear
 
