--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -185,7 +185,9 @@ a {
   width: 30em;
   background-color: #F9F9F9;
   border: 1px solid #777777;
-  padding: 5px; }
+  padding: 5px;
+  font-size: 1.1em;
+  font-style: italic; }
   #protest-box .button {
     float: right;
     margin-left: 1em; }
