--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -186,6 +186,8 @@ a
   background-color: #F9F9F9
   border: 1px solid #777777
   padding: 5px
+  font-size: 1.1em
+  font-style: italic
   .button
     float: right
     margin-left: 1em
