--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_messages
 
   %p
-    Datum:
+    Erstellt am:
     = I18n.l Time.now
   %p
     Ort:
@@ -14,7 +14,21 @@
     = f.text_field :title, :size => 52
   %p
     Inhalt:
-    %br/
+    %small
+      Der Inhalt wird mit 
+      = link_to_function "markdown", "Element.toggle('markdown-help')"
+      ausgeben.
+    #markdown-help{:style => "display:none"}
+      :plain
+        Link: [Linkname](http://addresse.net "Linktitel")<br />
+        *kursiv*<br />
+        **Fett**<br />
+        * erster Listenpunkt<br />
+        * zweiter Listenpunkt<br />
+      %p
+        Übersicht über alle Formatierungen:
+        = link_to "Markdown Cheatsheet", "http://packetlife.net/static/cheatsheets/markdown.pdf", :target => '_blank'
+
     = f.text_area :body, :size => '60x20'
   %p
     = f.submit "Speichern"
