--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -12,6 +12,7 @@
     %li= link_to "Noya - das Jugendnetzwerk in Attac", "http://www.no-ya.de"
     %li= link_to "Robin Wood", "http://www.robinwood.de/"
     %li= link_to "FelS", "http://fels.nadir.org/"
+    %li= link_to "['solid]", "http://www.linksjugend-solid.de/"
 
 %p
   Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? 
