Added infos to invitation mail.

--- a/app/views/mailer/invitation.erb
+++ b/app/views/mailer/invitation.erb
@@ -8,11 +8,20 @@ Folgende persönliche Nachricht sollen wir Dir von <%= @from_name %> zustellen:
 
 Hier kannst du mitmachen: <%= APP_CONFIG[:base_url] %>
 
-Klima-Killer vor Gericht, Klimaschützer freisprechen!
+--- weitere Informationen ----
 
-Deine
-Kampagne Ausgekohlt!
+          Vattenfall verklagt Klimaschützer_innen
+     +++ JETZT online protestieren: www.ausgekohlt.net +++
+	+++ Nächste Prozesse schon am 12. u. 20. Mai +++
 
---
-Kampagne Ausgekohlt!
-Im Internet unter: <%= APP_CONFIG[:base_url] %>
+Im letzten Sommer besetzten mehr als 30 Klimaschützer_innen die Baustelle des von Vattenfall geplanten Kohlekraftwerks in Hamburg- Moorburg. Die Aktion im Rahmen des Klimacamps erregte viel Aufsehen - wenige Tage später versuchten über 700 Menschen die Baustelle noch einmal zu besetzen.
+
+Klimasünder bestraft Klimaschützer?
+Nun will Vattenfall die Klimaschützer_inne für ihre Aktion zivilen Ungehorsams vor Gericht zur Kasse bitten! Und das obwohl diese nur das getan haben, was angesichts der drohenden Klimakatastrophe dringend notwendig ist - sie haben den Bau eines weiteren Klima-Killers blockiert!
+
+Vattenfall klagt an - tu etwas dagegen - www.ausgekohlt.net !
+Die nächsten Prozesse sollen in Kürze stattfinden. Beteilige Dich jetzt an der Online-Aktion ausgekohlt.net und fordere von Vattenfall die Rücknahme der Anzeigen und den sofortigen Baustopp des Kohlekraftwerkes in Moorburg.
+
+Wir lassen uns Klimaschutz nicht verbieten - erst recht nicht von Vattenfall!
+www.ausgekohlt.net
+
