Implemented newsletter module.
* Build html mail with markdown
* Variable like {{name}} will be replaced with activist info.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,6 +19,7 @@
         <ul>
           <li><%= link_to "Adminübersicht", :controller => 'admin' -%></li>
           <li><%= link_to "News verwalten", :controller => 'posts' -%></li>
+          <li><%= link_to "Newsletter verwalten", newsletters_path -%></li>
           <li><%= link_to "Zurück zur Startseite", root_path -%></li>
         </ul>
       </div>
