--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -2,12 +2,22 @@
 
 %p
   = link_to "News verwalten", posts_path
+  |
+  = link_to "Newsletter verwalten", newsletters_path
 
 %h3 Statistik
 
 %table
   %tr
-    %th{:colspan => 2} Zusammenfassung
+    %th{:colspan => 2} Aktivisten
+  %tr
+    %td insgesamt
+    %td= Activist.count
+  %tr
+    %td Newsletter abbonniert
+    %td= Activist.want_news.count
+  %tr
+    %th{:colspan => 2} Protestmails
   %tr
     %td Bisher mitgemacht
     %td.right= ProtestMail.count
@@ -18,7 +28,7 @@
     %td noch offen
     %td.right= ProtestMail.count - ProtestMail.deliverd.count
   %tr
-    %th{:colspan => 2} Historie
+    %th{:colspan => 2} Protestmail Historie
   - 14.times do |i|
     - starts = i.day.ago.beginning_of_day
     - ends = starts.end_of_day
