Updated start page.

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -10,9 +10,9 @@
   .button
     = link_to image_tag("symbol_mitmachen.png", :mouseover => "symbol_mitmachen_down.png"), {:controller => 'protest'}, :title => "Mitmachen"
   %p
-    Der nächste Gerichtstermin ist schon am
-    %b 20. Mai.
-    Jetzt Protestmail verschicken und Vattenfall stoppen!
+    Es wurden in den letzten 10 Tagen bereits über
+    %b 9.500 Protestmails
+    an Vattenfall versendet. Trotzdem hat Vattenfall den Strafantrag bisher nicht zurückgezogen. Jetzt noch mehr Druck machen und Vattenfall stoppen!
   .clear
 
 %h3 Klimasünder bestraft Klimaschützer?
