--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -190,7 +190,8 @@ a {
   font-style: italic; }
   #protest-box .button {
     float: right;
-    margin-left: 1em; }
+    margin-left: 1em;
+    margin-top: 1em; }
 
 ul#supporter {
   font-size: 1.1em; }
