Refreshed blog posts views.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <div id="menu">
         <ul>
           <li><%= link_to "Mitmachen", :controller => 'protest' -%></li>
-          <li><%= link_to "News", site_link_path('aktuelles') -%></li>
+          <li><%= link_to "News", blog_path -%></li>
           <li><%= link_to "Unterstützerinnen", site_link_path('unterstutzerinnen') -%></li>
           <li><%= link_to "Spenden", site_link_path('spenden') -%></li>
           <li><%= link_to "Hintergrund", site_link_path('hintergrund') -%></li>
@@ -42,7 +42,7 @@
               <%= link_to image_tag("symbol_mitmachen.png", :mouseover => "symbol_mitmachen_down.png"), {:controller => 'protest'}, :title => "Mitmachen" -%>
             </div>
             <div class="button">
-              <%= link_to image_tag("symbol_news.png", :mouseover => "symbol_news_down.png"), {:controller => 'site', :action => "news"}, :title => "aktuelle Neuigkeiten" -%>
+              <%= link_to image_tag("symbol_news.png", :mouseover => "symbol_news_down.png"), blog_path, :title => "aktuelle Neuigkeiten" -%>
             </div>
             <div class="button">
               <%= link_to image_tag("symbol_unterstuetzer.png", :mouseover => "symbol_unterstuetzer_down.png"), site_link_path('unterstutzerinnen'), :title => "Unterstützerinnen" -%>
