--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,5 +1,8 @@
 <% title "Aktuelles" %>
 <%= render :collection => @posts, :partial => 'post' %>
 <p>
-  <%= link_to "Ältere News lesen ...", blog_archive_path %>
+  <% if Post.count > 10 %>
+    <%= link_to "Ältere News lesen ...", blog_archive_path %> |
+  <% end %>
+  <%= link_to "Newsfeed abonnieren", blog_path(:format => :atom) %>
 </p>
